<resources>
    <string name="app_name">Admin Obat Triyola</string>

    <!--    Login-->
    <string name="login_title">Masuk</string>
    <string name="login_desc">Masukkan nomor telepon untuk mengakses layanan digital Klinik Triyola</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>

<!--    Daftar Obat-->
    <string name="obat">Obat</string>
    <string name="riwayat">Riwayat</string>
    <string name="pengajuan">Pengajuan</string>
    <string name="simpan">Simpan</string>
    <string name="ajukan">Ajukan</string>
    <string name="ubah">Ubah</string>
    <string name="title_daftar_obat">Daftar Obat</string>
    <string name="jumlah_text">Jumlah:</string>
    <string name="batalkan">Batalkan</string>
    <string name="bersihkan">Bersihkan</string>


    <!--    Custom Dialog-->
    <string name="confirm_delete">Apakah anda yakin ingin menghapus data ini ?</string>
    <string name="tidak">Tidak</string>
    <string name="iya">Iya</string>
    <string name="nama_obat">Nama Obat</string>
    <string name="dosis_obat">Dosis Obat (mg)</string>
    <string name="jumlah_obat">Jumlah Obat</string>
    <string name="ubah_obat">Ubah Obat</string>
    <string name="confirm_add_obat">Konfirmasi Penambahan Data Obat</string>
    <string name="confirm_add_obat_question">Apakah anda yakin ingin menambahkan data - data tersebut ?</string>
    <string name="panduan">Panduan</string>
    <string name="guide_1">Tap tahan pada form obat yang telah terisi untuk melakukan \</string>
    <string name="guide_2">Swipe kiri pada form obat yang telah terisi untuk melakukan \</string>
    <string name="guide_1_desc">\ Update Data</string>
    <string name="guide_2_desc">\ Penghapusan Data</string>
    <string name="guide_3_a">Tap \</string>
    <string name="guide_3_b">\ tambah form obat + \</string>
    <string name="guide_3_c">\ untuk \</string>
    <string name="guide_3_d">\ Menambahkan form obat</string>
    <string name="tutup">Tutup</string>

    <!--    Tambah Obat-->
    <string name="tambah_obat">Tambah Obat</string>
    <string name="tambah">Tambah</string>
    <string name="urungkan">Urungkan</string>

<!--    Jenis Obat-->
    <string name="sirup">Sirup</string>
    <string name="tablet">Tablet</string>
    <string name="injeksi">Injeksi</string>
    <string name="box">Box</string>
    <string name="flash">Flash</string>
    <string name="ampul">Ampul</string>
    <string name="pcs">Pcs</string>

<!--    Dropdown-->
    <string name="if_poli_empty">Jenis Obat</string>

<!--    Dialog Panduan Tambah Obat-->
    <string name="tambah_obat_guide_a_a">Tap tahan pada \</string>
    <string name="tambah_obat_guide_a_b">\ Form Obat</string>
    <string name="tambah_obat_guide_a_c">\ untuk mengaktifkan mode</string>
    <string name="tambah_obat_guide_a_d">\ Penghapusan Ganda</string>
    <string name="tambah_obat_guide_b_a">Tap pada tulisan</string>
    <string name="tambah_obat_guide_b_b">\ Batalkan</string>
    <string name="tambah_obat_guide_b_c">\ untuk</string>
    <string name="tambah_obat_guide_b_d">\ Membatalkan Mode Penghapusan Ganda</string>
    <string name="tambah_obat_guide_c_a">Tap pada tulisan</string>
    <string name="tambah_obat_guide_c_b">\ Bersihkan</string>
    <string name="tambah_obat_guide_c_c">\ untuk</string>
    <string name="tambah_obat_guide_c_d">\ Membersihkan Penanda Penghapusan</string>
    <string name="title_riwayat_obat">Riwayat Transaksi Obat</string>
    <string name="form_alamat">Form Pengajuan</string>
    <string name="hapus">Hapus</string>

    <!--    Jenis Pengajuan Obat-->
    <string name="psikotropika">Psikotropika</string>
    <string name="reguler">Reguler</string>
<!--    Update Dialog-->
    <string name="distributor_update_desc">Ubah Informasi Distributor</string>




</resources>